[gd_scene load_steps=3 format=3 uid="uid://dqqfh3xxixbd7"]

[ext_resource type="Script" path="res://Scripts/development_menu_item.gd" id="1_petyr"]
[ext_resource type="Texture2D" uid="uid://dy4u85o5632jt" path="res://Assets/teeny tiny.png" id="2_k280v"]

[node name="DevelopmentMenuItem" type="ColorRect"]
custom_minimum_size = Vector2(112, 28)
anchors_preset = -1
anchor_right = 0.068
anchor_bottom = 0.031
offset_right = -112.2
offset_bottom = -27.59
size_flags_horizontal = 4
color = Color(0.215686, 0.215686, 0.215686, 1)
script = ExtResource("1_petyr")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DevelopmentsOptionButton" type="OptionButton" parent="."]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/arrow_margin = 0
theme_override_constants/outline_size = 0
theme_override_constants/modulate_arrow = 0
theme_override_font_sizes/font_size = 15
theme_override_icons/arrow = ExtResource("2_k280v")
fit_to_longest_item = false

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="item_selected" from="DevelopmentsOptionButton" to="." method="_on_developments_option_button_item_selected"]
